// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardToolbar > renders with as correctly 1`] = `
"<section class="shrink-0 flex items-center justify-between border-b border-default px-4 sm:px-6 gap-1.5 overflow-x-auto min-h-[49px]">
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</section>"
`;

exports[`DashboardToolbar > renders with class correctly 1`] = `
"<div class="shrink-0 flex items-center justify-between border-b border-default sm:px-6 gap-1.5 overflow-x-auto min-h-[49px] px-8">
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`DashboardToolbar > renders with default slot correctly 1`] = `"<div class="shrink-0 flex items-center justify-between border-b border-default px-4 sm:px-6 gap-1.5 overflow-x-auto min-h-[49px]">Default slot</div>"`;

exports[`DashboardToolbar > renders with left slot correctly 1`] = `
"<div class="shrink-0 flex items-center justify-between border-b border-default px-4 sm:px-6 gap-1.5 overflow-x-auto min-h-[49px]">
  <div class="flex items-center gap-1.5">Left slot</div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;

exports[`DashboardToolbar > renders with right slot correctly 1`] = `
"<div class="shrink-0 flex items-center justify-between border-b border-default px-4 sm:px-6 gap-1.5 overflow-x-auto min-h-[49px]">
  <div class="flex items-center gap-1.5"></div>
  <div class="flex items-center gap-1.5">Right slot</div>
</div>"
`;

exports[`DashboardToolbar > renders with ui correctly 1`] = `
"<div class="shrink-0 flex items-center justify-between border-b border-default px-4 sm:px-6 gap-1.5 overflow-x-auto min-h-[49px]">
  <div class="flex gap-1.5 items-center">Left slot</div>
  <div class="flex items-center gap-1.5"></div>
</div>"
`;
